[metadata]
name = hyprpy
version = 0.1.2
description = Python bindings for the Hyprland compositor.
long_description = file: README.md
long_description_content_type = text/markdown
author = Julian Lobbes
author_email = julian@lobbes.dev
project_urls =
    repo = https://github.com/ulinja/hyprpy
    docs = https://hyprpy.docs.lobbes.dev
keywords = hyprland, wayland, compositor, window manager
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Desktop Environment :: Window Managers
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7
install_requires =
    pydantic >= 2.1.1

[options.packages.find]
exclude =
    docs*
